contact_avatar_retrieved: improve debug

Bug: https://bugs.freedesktop.org/show_bug.cgi?id=70010
Reviewed-by: Guillaume Desmottes <guillaume.desmottes@collabora.co.uk>